chore: (update UI) -fix jumping footer -change select button icon image -tweak responsiveness for new-record.html

--- a/UI/css/new-record.css
+++ b/UI/css/new-record.css
@@ -14,6 +14,8 @@
   flex-direction: column;
 }
 
+html, body { height:100%;}
+
 /**  #1C6663 **/
 
 .boxes {
@@ -152,17 +154,16 @@ footer {
 }
 
 textarea {
-    height: 50px;
-    width: 300px;
-    padding: 12px 20px;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    background-color: #f8f8f8;
-    background-color: inherit;
+  height: 50px;
+  width: 300px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  background-color: inherit;
   border: 1px solid #333;
   border-radius: 6px;
-  margin: 4px;
+  margin-top: 4px;
   padding: 8px;
   color: #111;
 }
@@ -230,7 +231,6 @@ input {
   color: white;
   text-align: center;
   background-color: #053D48;
-  height: 40px;
   align-items: center;
   justify-content: center;
 }
@@ -248,8 +248,9 @@ input {
   padding: 46px;
   background-color:#ffffff;
   text-align: center;
-  width: 400px;
+  width: 370px;
   height: 400px;
+  align-items: center;
   justify-content: center;
   border-radius: 50px
 }
